@@ -46,5 +46,6 @@ EXPORTS
     WgxCreateProcess
     WgxCreateThread
     WgxSetProcessPriority
+    WgxCheckAdminRights
     
     WgxPrintUnicodeString
