@@ -141,6 +141,7 @@ BOOL WgxRemoveTaskbarIconOverlay(HWND hWindow);
 BOOL WgxCreateProcess(char *cmd,char *args);
 BOOL WgxCreateThread(LPTHREAD_START_ROUTINE routine,LPVOID param);
 BOOL WgxSetProcessPriority(DWORD priority_class);
+BOOL WgxCheckAdminRights(void);
 
 void WgxPrintUnicodeString(wchar_t *string,FILE *f);
 
